--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -97,6 +97,10 @@
 	
 }
 
+.concept-illustrations {
+	
+}
+
 /************************************* Page ConceptScheme */
 #concetpScheme-created {
 	
