--- a/web/WEB-INF/templates/VM_global_library.vm
+++ b/web/WEB-INF/templates/VM_global_library.vm
@@ -508,3 +508,40 @@ knowledge of the CeCILL-B license and that you accept its terms.
 	</div>
 #end
 #end
+
+#**
+ * Affiche les labels ainsi que les informations associées
+ *
+ * @param name
+ *			Libellé de la section
+ * @param values
+ *			Collection de LocalizedString à afficher
+ * @param labelType
+ *			Type de label (pref ou alt)
+ * @param locale
+ * 			Langage préférentiel pour affichage du libellé
+ * @param css
+ *			Classe CSS du conteneur
+ *#
+#macro( show_labels $name $values $labelType $locale $css $resourceprefix )
+#if( !$collection.isStringEmpty($values) )
+	#if ($values.size() == 1) ## skos core labels
+		#show_property_with_links( $name $values $locale $css $resourceprefix 	)
+	#elseif ($values.size() > 1) ## skos xl labels
+		<div class="key-value $!css">
+        	<h2 class="key">$esc.html($name)</h2>
+        	<ul class="value">
+        		#foreach ( $label in $values )
+        			#set($labelSource = $display.stripTags($label.getProperty($prefixes.expandUri("dc:source")).value, "a"))
+        			#foreach ($item in $sorter.sortStrings($label.getProperties($prefixes.expandUri("xl:literalForm")), [$locale, null]))
+						#if( $item.value != "" )
+				<li #if($item.language)xml:lang="$item.language"#end><span class="lit-lang">#if($item.language)($lang.format($esc.html($item.language)))#end</span> <span class="lit-value">#if($resourceprefix)$text.get("${resourceprefix}${item.value}")#else$display.stripTags($item.value, "a")#end #if($labelSource != "")(Source : $labelSource)#end</span></li>
+	        			#end
+	        		#end
+	        		#set($labelSource = "")
+         		#end
+        	</ul>
+      	</div>
+	#end
+#end
+#end
