--- a/web/WEB-INF/templates/conceptGroup.vm
+++ b/web/WEB-INF/templates/conceptGroup.vm
@@ -67,15 +67,19 @@ Paramètres:
 						#foreach($scheme in $it.getAllConceptSchemeMembers())
 						<li>
 							#set($filteredConceptGroupUrl = "${it.getLabel()}?sourceVocabulary=$resolver.getUri($scheme.uri)")
-							
+							#set($isCurrentVocabulary = $scheme.getLabel($locale).value.equals($!it.getVocabularyLabel($locale).value))
 							<a href="$resolver.toUrl("../page/conceptGroup" , $filteredConceptGroupUrl)">
+								#if($isCurrentVocabulary) <strong> #end
 								$esc.html($scheme.getLabel($locale).value)
+								#if($isCurrentVocabulary) </strong> #end
 							</a>
 						</li>
 						#end
 						<li>
 							<a href="$resolver.toUrl("../page/conceptGroup" , $it.getLabel())">
+								#if(!$it.isSetSourceVocabulary()) <strong> #end
 								$esc.html("Tous les vocabulaires")
+								#if(!$it.isSetSourceVocabulary()) </strong> #end
 							</a>
 						</li>
 					</ul>
